# zhttplib

./: CMakeLists.txt  CMakePresets.json  README.md  client.py  main.cpp  readme.md  userMain.cpp
ZServer/: CMakeLists.txt  Objects.hpp  WorkersBase.hpp  argparse.hpp  main.cpp  userMain.cpp
ZServer/master/: WorkersPool.hpp  master.cpp  master.h
ZServer/worker/: WorkerRoutine.hpp  workerMain.cpp
include/: argparse.hpp  utils.hpp
include/client/: client.hpp
include/http/: HTTP.hpp  HTTPBase.h  HTTPRequest.h  HTTPRequest.hpp  HTTPResponse.h  HTTPResponse.hpp  http.h
include/osResources/: Pipe.hpp  Process.hpp  SharedMemory.hpp  TCPSocket.hpp  mutex.hpp
include/server/: HTTPServer.hpp  Routemap.hpp  SocketServer.hpp  ThreadPool.hpp
lib/: CMakeLists.txt  base.hpp  lib.h
lib/ThreadWorkers/: TWorker.cpp  TWorker.h
lib/client/: client.cpp  client.hpp
lib/http/: HTTPReqRes.h
lib/include/: Exceptions.h  HTTPReqRes.h  HTTPServerProps.h  Objects.hpp  Routemap.h  Server.h  Socket.h  TWorker.h  Utils.h  Worker.h  WorkerRoutine.hpp  WorkersBase.hpp  WorkersPool.hpp  base.hpp  client.hpp  osResources.hpp
lib/multiproccesing/: Objects.hpp  WorkerRoutine.hpp  Workers.hpp  WorkersBase.hpp  WorkersPool.hpp
lib/osResources/: Pipe.hpp  Process.hpp  SharedObject.hpp  Socket.cpp  Socket.h
lib/server/: HTTPServerProps.h  Routemap.h  Server.cpp  Server.h  Utils.cpp  Utils.h
lib/src/: HTTPReqRes.cpp  HTTPServerProps.cpp  Routemap.cpp  base.cpp
mp/: Source.hpp  fastrun.ps1  master.cpp  slave.cpp
multiproccesing/: CMakeLists.txt
multiproccesing/include/: Objects.hpp  WorkerRoutine.hpp  WorkersPool.hpp  argparse.hpp
multiproccesing/src/: source.cpp
src/: Exceptions.hpp  main.cpp  utils.cpp
src/client/: client.cpp  client.hpp
src/http/: HTTPBase.cpp  HTTPReqRes.cpp  HTTPReqRes.h  HTTPRequest.cpp  HTTPResponse.cpp  http.cpp
src/osResources/: Pipe.cpp  Pipe.hpp  Process.cpp  Process.hpp  SharedMemory.cpp  SharedMemory.hpp  TCPSocket.cpp  mutex.cpp  mutex.hpp
src/server/: HTTPServer.cpp  HTTPServer.hpp  Routemap.cpp  Routemap.h  SocketServer.cpp  SocketServer.hpp  ThreadPool.cpp  ThreadPool.hpp
